# try-on-xr

./: .gitignore  README.md  WORKLOG.md  implementation_plan.md.resolved  index.html  package-lock.json  package.json  project-structure.txt  vite.config.ts
physics/: Cargo.toml
physics/src/: lib.rs
physics/src/collision/: collider.rs  exclusion.rs  geometry.rs  mod.rs  preprocessing.rs  resolver.rs  self_collision.rs  spatial_hash.rs
physics/src/collision/resolver/: broad.rs  mod.rs  narrow.rs
physics/src/collision/self_collision/: coloring.rs  config.rs  detection.rs  mod.rs  resolution.rs
physics/src/collision/spatial/: dynamic.rs  mod.rs  static_grid.rs
physics/src/collision/spatial_hash/: dynamic.rs  mod.rs  static_grid.rs
physics/src/constraints/: bending.rs  distance.rs  mod.rs  mouse.rs  tether.rs
physics/src/constraints/tether/: horizontal.rs  mod.rs  vertical.rs
physics/src/dynamics/: forces.rs  mod.rs  solver.rs
physics/src/engine/: config.rs  mod.rs  simulation.rs  state.rs
physics/src/systems/: mod.rs
physics/src/systems/constraints/: area.rs  bending.rs  distance.rs  mod.rs  mouse.rs
physics/src/systems/dynamics/: integrator.rs  mod.rs  solver.rs
physics/src/systems/forces/: aerodynamics.rs  mod.rs
physics/src/utils/: coloring.rs  math.rs  mod.rs  normals.rs  profiler.rs  simd.rs
physics/src/utils/simd/: f32x4.rs  mod.rs  vec3x4.rs
physics/tests/collision/: collider.rs  exclusion.rs  main.rs  narrow.rs  preprocessing.rs  self_collision.rs  spatial.rs
physics/tests/engine/: simulation.rs
physics/tests/systems/: main.rs
physics/tests/systems/constraints/: area.rs  bending.rs  distance.rs  mod.rs  tether.rs
physics/tests/systems/dynamics/: integrator.rs
physics/tests/systems/forces/: aerodynamics.rs
physics/tests/utils/: main.rs  normals.rs
(+157 files in other folders)
