[package]
name = "vestra-physics"
version = "3.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance", "PerformanceMark", "PerformanceMeasure", "console"] }
console_error_panic_hook = "0.1"
glam = { version = "0.24", features = ["scalar-math"] }
rustc-hash = "2.0"
smallvec = "1.11"
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = ["profiling", "parallel"]
profiling = []
parallel = ["rayon", "wasm-bindgen-rayon"]